--- a/app/src/main/res/layout/activity_atur_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_atur_lokasi_part.xml
@@ -52,48 +52,70 @@
                 android:orientation="vertical">
 
 
-                <EditText
-                    android:id="@+id/et_no_part"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_solid"
-                    android:ems="10"
-                    android:enabled="false"
-                    android:hint="NO. PART"
-                    android:inputType="number"
-                    android:padding="5dp"
-                    android:textAlignment="center" />
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center">
 
-                <EditText
-                    android:id="@+id/et_nama_part"
-                    android:enabled="false"
+                    <EditText
+                        android:id="@+id/et_no_part"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:hint="NO. PART"
+                        android:inputType="number"
+                        android:padding="5dp"
+                        android:textAlignment="center" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_solid"
-                    android:ems="10"
-                    android:hint="NAMA PART"
-                    android:inputType="number"
-                    android:padding="5dp"
-                    android:textAlignment="center" />
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center">
 
-                <EditText
-                    android:id="@+id/et_merk_part"
+                    <EditText
+                        android:id="@+id/et_nama_part"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:hint="NAMA PART"
+                        android:inputType="number"
+                        android:padding="5dp"
+                        android:textAlignment="center" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:enabled="false"
-                    android:layout_weight="2"
-                    android:background="@drawable/border_solid"
-                    android:ems="10"
-                    android:hint="MERK PART"
-                    android:inputType="number"
-                    android:padding="5dp"
-                    android:textAlignment="center" />
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center">
 
+                    <EditText
+                        android:id="@+id/et_merk_part"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="2"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:hint="MERK PART"
+                        android:inputType="number"
+                        android:padding="5dp"
+                        android:textAlignment="center" />
+
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
 
@@ -165,7 +187,6 @@
                         android:id="@+id/sp_norakPalet_part"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:entries="@array/no_rak_palet_part"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -188,7 +209,6 @@
                         android:id="@+id/sp_noFolder_part"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:entries="@array/no_folder_part"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -211,7 +231,6 @@
                         android:id="@+id/sp_tinggiRak"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:entries="@array/tinggi_rak_part"
                         android:textAlignment="center" />
 
                 </LinearLayout>
