--- a/app/src/main/res/layout/activity_atur_penugasan_.xml
+++ b/app/src/main/res/layout/activity_atur_penugasan_.xml
@@ -63,6 +63,13 @@
                 android:focusableInTouchMode="true"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:textAlignment="center">
+
                 <EditText
                     android:id="@+id/et_namaMekanik"
                     android:layout_width="match_parent"
@@ -72,6 +79,8 @@
                     android:inputType="text"
                     android:maxLines="1"
                     android:singleLine="true" />
+                </android.support.design.widget.TextInputLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -208,22 +217,38 @@
                     android:layout_weight="1"
                     android:text="Jam Kerja" />
 
-                <EditText
-                    android:id="@+id/et_mulaiKerja"
-                    android:layout_width="100dp"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:gravity="center"
-                    android:hint="Mulai" />
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/et_mulaiKerja"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:hint="Mulai" />
+
+                </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginLeft="3dp"
                     android:text="-"
                     android:textSize="20sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center">
 
                 <EditText
                     android:id="@+id/et_selesaiKerja"
@@ -234,6 +259,8 @@
                     android:ems="10"
                     android:gravity="center"
                     android:hint="Selesai" />
+
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
 
@@ -252,6 +279,13 @@
                     android:layout_weight="1"
                     android:text="Jam Istirahat" />
 
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center">
+
                 <EditText
                     android:id="@+id/et_mulaistirahat"
                     android:layout_width="100dp"
@@ -262,12 +296,23 @@
                     android:gravity="center"
                     android:hint="Mulai" />
 
+                </android.support.design.widget.TextInputLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:text="-"
                     android:textSize="20sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center">
 
                 <EditText
                     android:id="@+id/et_selesaistirahat"
@@ -279,12 +324,12 @@
                     android:gravity="center"
                     android:hint="Selesai" />
 
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
