--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -39,6 +39,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/border_solid"
             tools:context=".modules.terima_part.DetailPartDiterima">
 
@@ -181,7 +185,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|left"
         android:layout_marginStart="20sp"
-        android:layout_marginTop="40sp"
+        android:layout_marginTop="100sp"
         android:background="@drawable/btn_rounded_accent"
         android:text="Tutup" />
 
@@ -191,7 +195,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|right"
         android:layout_marginEnd="20sp"
-        android:layout_marginTop="40sp"
+        android:layout_marginTop="100sp"
         android:clickable="true"
         app:srcCompat="@drawable/ic_add" />
 
