--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -54,13 +54,13 @@
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:text="No. PART" />
 
                 <TextView
                     android:id="@+id/textView23"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:text="NAMA PART" />
 
                 <LinearLayout
@@ -71,7 +71,7 @@
                     <TextView
                         android:id="@+id/textView25"
                         android:layout_width="wrap_content"
-                        android:layout_height="40sp"
+                        android:layout_height="50sp"
                         android:layout_weight="1"
                         android:text="JUMLAH" />
 
@@ -88,25 +88,25 @@
                 <TextView
                     android:id="@+id/textView28"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:text="HARGA BELI/UNIT" />
 
                 <TextView
                     android:id="@+id/textView29"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:text="DISCOUNT BELI" />
 
                 <TextView
                     android:id="@+id/textView30"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:text="LOKASI SIMPAN" />
 
                 <TextView
                     android:id="@+id/textView31"
                     android:layout_width="match_parent"
-                    android:layout_height="30sp"
+                    android:layout_height="50sp"
                     android:text="PENEMPATAN" />
 
             </LinearLayout>
@@ -119,7 +119,7 @@
                 <EditText
                     android:id="@+id/txtNoPart"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:ems="10"
                     android:enabled="false"
                     android:inputType="textPersonName" />
@@ -127,7 +127,7 @@
                 <EditText
                     android:id="@+id/txtNamaPart"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:ems="10"
                     android:inputType="textPersonName" />
 
@@ -142,36 +142,36 @@
                         android:layout_height="50sp"
                         android:layout_weight="1"
                         android:text="SCAN" />
+
                 </LinearLayout>
 
                 <EditText
                     android:id="@+id/txtHargaBeliUnit"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:layout_height="50sp"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:text="Rp." />
 
                 <EditText
-                    android:id="@+id/txtLokasiSimpan"
-                    android:layout_width="match_parent"
-                    android:layout_height="40sp"
+                    android:id="@+id/txtDiskonBeli"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50sp"
+                    android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName" />
 
-                <EditText
-                    android:id="@+id/editText13"
+                <Spinner
+                    android:id="@+id/spinnerLokasiSimpan"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:layout_height="50sp"
+                    android:entries="@array/lokasi_simpan" />
 
-                <EditText
-                    android:id="@+id/txtPenempatan"
+                <Spinner
+                    android:id="@+id/spinnerPenempatan"
                     android:layout_width="match_parent"
-                    android:layout_height="40sp"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:layout_height="50sp"
+                    android:entries="@array/penempatan" />
 
             </LinearLayout>
 
