--- a/app/src/main/res/layout/activity_atur_parts_new.xml
+++ b/app/src/main/res/layout/activity_atur_parts_new.xml
@@ -173,7 +173,7 @@
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/txtStock"
+                        android:id="@+id/txtHet"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:enabled="false"
