--- a/app/src/main/res/layout/item_part_detail_lokasi.xml
+++ b/app/src/main/res/layout/item_part_detail_lokasi.xml
@@ -41,7 +41,7 @@
                     android:text="DISC" />
 
                 <TextView
-                    android:id="@+id/txtStock"
+                    android:id="@+id/txtHet"
                     android:layout_width="match_parent"
                     android:gravity="right"
                     android:textColor="@color/red_900"
