--- a/app/src/main/res/layout/parts_new.xml
+++ b/app/src/main/res/layout/parts_new.xml
@@ -36,7 +36,7 @@
                         android:textSize="12sp" />
 
                     <TextView
-                        android:id="@+id/txt"
+                        android:id="@+id/txtNamaPart"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="2"
