--- a/app/src/main/res/layout/activity_stock_opname.xml
+++ b/app/src/main/res/layout/activity_stock_opname.xml
@@ -33,7 +33,7 @@
                 </android.support.v7.widget.Toolbar>
 
                 <ImageView
-                    android:id="@+id/imgBarcode"
+                    android:id="@+id/imgBarcode_stockOpname"
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:layout_gravity="right|center_vertical"
