--- a/app/src/main/res/layout/activity_atur_layanan_.xml
+++ b/app/src/main/res/layout/activity_atur_layanan_.xml
@@ -6,20 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_atur_layanan"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,15 +30,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="JENIS LAUANAN"
+                    android:text="JENIS LAYANAN"
                     android:textColor="#F44336" />
 
                 <Spinner
                     android:id="@+id/sp_jenis_layanan"
                     android:layout_width="wrap_content"
-                    android:entries="@array/jenis_layanan"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:entries="@array/jenis_layanan" />
             </LinearLayout>
 
             <LinearLayout
@@ -133,10 +119,10 @@
 
                 <Spinner
                     android:id="@+id/sp_status_layanan"
-                    android:entries="@array/status_layanan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:entries="@array/status_layanan" />
             </LinearLayout>
 
             <LinearLayout
@@ -357,8 +343,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:ems="5"
-                            android:inputType="number"
                             android:hint="%"
+                            android:inputType="number"
                             android:padding="5dp"
                             android:textAlignment="center" />
 
@@ -385,8 +371,7 @@
                     </android.support.design.widget.TextInputLayout>
 
 
-            </LinearLayout>
-
+                </LinearLayout>
 
 
             </LinearLayout>
@@ -395,14 +380,29 @@
                 android:id="@+id/btn_simpan_atur_layanan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               android:layout_gravity="center"
-                android:textColor="@color/white_transparency"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"/>
+                android:text="SIMPAN"
+                android:textColor="@color/white_transparency" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_atur_layanan"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:minHeight="?attr/actionBarSize"/>
+
+    </android.support.design.widget.AppBarLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
