--- a/app/src/main/res/layout/activity_cari_part_.xml
+++ b/app/src/main/res/layout/activity_cari_part_.xml
@@ -2,73 +2,91 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:animateLayoutChanges="true"
-    tools:context=".MainActivity">
+    android:focusableInTouchMode="true"
+    android:fitsSystemWindows="true">
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="150dp"
+            android:id="@+id/recyclerView_cariPart"
+            tools:listitem="@layout/item_daftar_cari_part"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-            <LinearLayout
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_cariPart"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+        <RelativeLayout
+            android:id="@+id/search_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="@color/colorPrimary"
+            android:padding="@dimen/activity_horizontal_margin">
+
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:background="@drawable/border_shadow_left"
+                android:textAlignment="center"
+                android:layout_gravity="center">
 
-                <LinearLayout
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-               <android.support.design.widget.TextInputLayout
-                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                   android:layout_width="250dp"
-
-                   android:layout_height="wrap_content">
-
-                   <com.rkrzmail.srv.NikitaAutoComplete
-                       android:id="@+id/et_cariPart"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:hint="Cari Part"
-                       android:inputType="text"
-                       android:maxLines="1"
-                       android:singleLine="true" />
-
-               </android.support.design.widget.TextInputLayout>
-
-                    <Button
-                        android:id="@+id/btn_cariPart"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_search"
-                        />
-
-                </LinearLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerView_cariPart"
-                    tools:listitem="@layout/item_daftar_cari_part"
+                <com.rkrzmail.srv.NikitaAutoComplete
+                    android:id="@+id/et_cariPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-            </LinearLayout>
-        </ScrollView>
+                    android:drawableRight="@android:drawable/ic_menu_search"
+                    android:hint="Cari Part"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/grey_80"
+                    android:textColorHint="@android:color/darker_gray" />
 
-    </LinearLayout>
+                <ProgressBar
+                    android:id="@+id/pb_tv_cariPart"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="5dp"
+                    android:visibility="gone"/>
 
+            </android.support.design.widget.TextInputLayout>
+        </RelativeLayout>
+
+    </android.support.design.widget.AppBarLayout>
 
 </android.support.design.widget.CoordinatorLayout>
