--- a/app/src/main/res/layout/activity_daftar_jurnal_.xml
+++ b/app/src/main/res/layout/activity_daftar_jurnal_.xml
@@ -8,35 +8,11 @@
     android:animateLayoutChanges="true"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-
-        <android.support.design.widget.AppBarLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_daftar_jurnal"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:titleTextColor="@color/white_transparency">
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
-
-
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
 
             <LinearLayout
@@ -52,9 +28,65 @@
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
-    </LinearLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_daftar_jurnal"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@color/white_transparency"/>
+
+        <RelativeLayout
+            android:id="@+id/search_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="@color/colorPrimary"
+            android:padding="@dimen/activity_horizontal_margin">
+
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border_shadow_left"
+                android:textAlignment="center"
+                android:layout_gravity="center">
+
+                <com.rkrzmail.srv.NikitaAutoComplete
+                    android:id="@+id/et_cariJurnal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@android:drawable/ic_menu_search"
+                    android:hint="Cari Part"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/grey_80"
+                    android:textColorHint="@android:color/darker_gray" />
+
+                <ProgressBar
+                    android:id="@+id/pb_tv_cariPart"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="5dp"
+                    android:visibility="gone"/>
+
+            </android.support.design.widget.TextInputLayout>
+        </RelativeLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
 
 
     <android.support.design.widget.FloatingActionButton
