--- a/app/src/main/res/layout/activity_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_lokasi_part.xml
@@ -8,33 +8,8 @@
     android:animateLayoutChanges="true"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_lokasi_part"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:titleTextColor="@color/white_transparency">
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
-
-
-
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -49,7 +24,7 @@
                     android:layout_width="330dp"
                     android:layout_height="130dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="150dp"
                     android:layout_marginBottom="20dp"
                     android:visibility="gone"
                     />
@@ -61,9 +36,61 @@
                     tools:listitem="@layout/item_lokasi_part"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
-    </LinearLayout>
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_lokasi_part"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@color/white_transparency"/>
+
+
+        <RelativeLayout
+            android:id="@+id/search_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="@color/colorPrimary"
+            android:padding="@dimen/activity_horizontal_margin">
+
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border_shadow_left"
+                android:layout_gravity="center">
+
+                <com.rkrzmail.srv.NikitaAutoComplete
+                    android:id="@+id/et_cariLokasiPart"
+                    android:focusedByDefault="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="22dp"
+                    android:background="@color/grey_80"
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:singleLine="true"
+                    android:drawableRight="@android:drawable/ic_menu_search"
+                    android:gravity="left|center"
+                    android:hint="Cari Part"
+                    android:padding="10dp"
+                    android:textColorHint="@android:color/darker_gray" />
+
+            </android.support.design.widget.TextInputLayout>
+        </RelativeLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
 
 
     <android.support.design.widget.FloatingActionButton
