--- a/app/src/main/res/layout/item_penugasan.xml
+++ b/app/src/main/res/layout/item_penugasan.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     android:layout_gravity="center"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="4dp"
@@ -12,71 +12,51 @@
     android:layout_marginBottom="4dp"
     android:foregroundGravity="center"
     app:layout_anchorGravity="center"
-    card_view:cardCornerRadius="4dp">
+    app:cardElevation="5dp"
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:foregroundGravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <TextView
-            android:id="@+id/tvNamaMekanik"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Nama Mekanik"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_line_solid"
-            />
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-
-            android:foregroundGravity="center"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:foregroundGravity="center"
-                android:gravity="center"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tvNamaMekanik"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:orientation="vertical">
+                    android:text="Nama Mekanik"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/tvAntrian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="Tipe Antrian"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tvAntrian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tipe Antrian"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/tvLokasi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="Lokasi Penugasan"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/tvLokasi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lokasi Penugasan"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
@@ -84,16 +64,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:foregroundGravity="center"
+                android:gravity="right"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvStart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+
+                    android:layout_marginTop="24dp"
                     android:text="Jam Mulai Kerja"
                     android:textStyle="bold" />
 
@@ -101,7 +82,6 @@
                     android:id="@+id/tvFinish"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:text="Jam Selesai Kerja"
                     android:textStyle="bold" />
 
